# python_test_task

./: README.md  pyproject.toml
app/: main.py  phone_numbers_parser.py
